gccida/c2/find_reloads_address_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5632:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5626:10: error: conflicting types for 'find_reloads_address_1'
__int64  find_reloads_address_1( 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:265:12: note: previous declaration is here
static int find_reloads_address_1 PARAMS ((enum machine_mode, rtx, int, rtx *,
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5643:4: error: expected ';' after expression
rtx v16; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5643:5: error: use of undeclared identifier 'v16'
rtx v16; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5644:6: error: use of undeclared identifier 'v17'
rtx *v17; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5645:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5645:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5646:6: error: use of undeclared identifier 'v19'
rtx *v19; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5647:4: error: expected ';' after expression
rtx v20; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5647:5: error: use of undeclared identifier 'v20'
rtx v20; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5653:6: error: use of undeclared identifier 'fld'; did you mean 'rld'?
rtx *fld; // rdx 
     ^~~
     rld
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:121:15: note: 'rld' declared here
struct reload rld[MAX_RELOADS];
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5653:5: error: invalid operands to binary expression ('struct rtx_def *' and 'struct reload [180]')
rtx *fld; // rdx 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5657:6: error: use of undeclared identifier 'v30'
rtx *v30; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5659:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5664:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v37; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5672:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5673:6: error: use of undeclared identifier 'v46'
rtx *v46; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5685:4: error: expected ';' after expression
rtx v58; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/reload.c:5685:5: error: use of undeclared identifier 'v58'
rtx v58; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads_address_1/src/obj/reload.o] Error 1
